--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Caroline Myers</title>
-  <meta name="description" content="Caroline Myers — perception science, adaptation, attention, and visual cognition." />
+  <meta name="description" content="Caroline Myers" />
   <link rel="icon" href="assets/icons/favicon.svg" type="image/svg+xml" />
   <link rel="stylesheet" href="assets/css/styles.css" />
 </head>
@@ -14,10 +14,12 @@
   <header class="site-header">
     <div class="container header-grid">
       <div class="brand">
-        <div class="brand-mark" aria-hidden="true"></div>
+        <a class="brand-link" href="#home">
+          <img class="brand-avatar" src="assets/img/profile.jpg" alt="Caroline Myers" />
+        </a>
         <div class="brand-text">
           <div class="brand-name">Caroline Myers</div>
-          <div class="brand-tagline">Vision • Attention • Adaptation</div>
+          <div class="brand-tagline">Visual attention • Adaptation</div>
         </div>
       </div>
 
@@ -37,14 +39,14 @@
       <div class="container hero-grid">
         <figure class="profile">
           <img src="assets/img/profile.jpg" alt="Portrait of Caroline Myers" loading="lazy" />
-          <figcaption class="muted">Photo credit: you (replace as desired)</figcaption>
+          <figcaption class="muted"> </figcaption>
         </figure>
 
         <div class="hero-copy">
-          <h1>Hi — I’m Caroline.</h1>
+          <h1>Hi there!</h1>
           <p>
             I’m a vision scientist studying how perception and attention interact over space and time.
-            A lot of my work uses psychophysics to ask what the visual system represents, when it updates,
+            A lot of my work uses psychophysics to ask about the representational format and content of perception, particularly how the internal structure of perceptual representations enables our experience of a coherent, stable world. 
             and how it stays stable even when objects move.
           </p>
           <p>
@@ -55,27 +57,29 @@
             <!-- populated by JS from data/site.json -->
           </p>
 
+             <!-- https://perception.jhu.edu/vsg/index.html -->
           <div class="badge-row" aria-label="Affiliations and quick links">
             <!-- Add your “always present” icons here (SVGs stored in assets/icons/) -->
             <a class="badge" href="#" target="_blank" rel="noreferrer">
-              <img src="assets/icons/placeholder.svg" alt="" aria-hidden="true" />
+              <img src="assets/icons/JHUVisionSciencesGroupLogo.svg" alt="" aria-hidden="true" />
               <span>JHU Vision Sciences</span>
             </a>
             <a class="badge" href="#" target="_blank" rel="noreferrer">
-              <img src="assets/icons/placeholder.svg" alt="" aria-hidden="true" />
-              <span>Lab / Group Link</span>
+              <img src="assets/icons/HalberdaLab.svg" alt="" aria-hidden="true" />
+              <span>Vision Lab @ JHU</span>
             </a>
           </div>
         </div>
       </div>
     </section>
 
+
     <!-- PUBLICATIONS -->
     <section id="publications" class="section">
       <div class="container">
         <div class="section-head">
           <h2>Publications</h2>
-          <p class="muted">Edit <code>data/publications.json</code> and drop PDFs into <code>files/publications/</code>.</p>
+          <p class="muted"> </p>
         </div>
 
         <div class="toolbar">
@@ -83,10 +87,10 @@
             <span class="sr-only">Search publications</span>
             <input id="pub-search" type="search" placeholder="Search by title, author, year…" autocomplete="off" />
           </label>
-          <div class="chips" id="pub-filters" aria-label="Publication filters"></div>
+          <div class="chips" id="publications-filters" aria-label="Publication filters"></div>
         </div>
 
-        <ol class="pub-list" id="pub-list" aria-live="polite"></ol>
+        <ol class="pub-list" id="publications-list" aria-live="polite"></ol>
       </div>
     </section>
 
@@ -178,5 +182,22 @@
   </main>
 
   <script src="assets/js/site.js"></script>
+
+<section id="presentations" class="section" data-title="Presentations">
+  <div class="container">
+    <div class="section-header">
+      <h2>Presentations</h2>
+      <p class="muted">Posters and talks. PDFs preview inline; click “Open PDF” for a full-size view. You can also embed a YouTube talk.</p>
+    </div>
+
+    <div id="presentations-list" class="stack"></div>
+
+    <div class="small muted" style="margin-top:14px;">
+      Add poster PDFs in <code>files/presentations/</code> and list them in <code>data/presentations.json</code>.
+      For YouTube, add a <code>youtubeId</code> (the part after <code>v=</code>).
+    </div>
+  </div>
+</section>
+
 </body>
 </html>
